<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#26886C91">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#886C91"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="96dp"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="0dp"
            android:cropToPadding="false"
            android:padding="16dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/logo_white" />

        <ImageView
            android:id="@+id/setting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="right|center_vertical"
            android:background="@drawable/account"
            tools:layout_editor_absoluteX="126dp"
            tools:layout_editor_absoluteY="3dp" />

        <TextView
            android:id="@+id/displayName"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:padding="8dp"
            android:text="Username"
            android:textAlignment="viewEnd"
            android:textStyle="bold"
            tools:ignore="RtlCompat"
            tools:layout_editor_absoluteX="267dp"
            tools:layout_editor_absoluteY="10dp" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/show_search_dialog"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/map_search"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/selected_gym"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <TextView
        android:id="@+id/selected_gym"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/selected_gym"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toStartOf="@+id/show_search_dialog"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />

    <ImageButton
        android:id="@+id/wall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="#00886C91"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_gym"
        app:srcCompat="@drawable/uni_board" />


</androidx.constraintlayout.widget.ConstraintLayout>